--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This project is built to implement redis and crypto nodejs",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,14 @@
   "homepage": "https://gitlab.com/binar-exercise-fsw23/how-to-use-redis#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "http-errors": "^2.0.0",
+    "morgan": "^1.10.0",
     "redis": "^4.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
